# nazotoki-tools

./: .gitignore  asset-manifest.json  index.html  package.json
alt-ergo/: alt-ergo-worker.js
butadic/: README.md  convert.py  gen_cnf.ts  gen_ts.py  memo.md  recover_minsat.py
butadic/butadic/: buta014.doc  hisbuta.doc  thanks.doc
config/: webpack.config.js
jsoo/: alt-ergo-wrapper.opam  dune  test.ml
minisat/: README.md  gen_worker.sh  minisat.js  minisat_withWorker.js  tail.js  test2.js  worker.js
public/: coi-serviceworker.js  index.html  worker.js
public/alt-ergo/: README.md  alt-ergo-worker.js
public/minisat/: minisat.js  minisat.wasm
src/: App.test.tsx  App.tsx  butadic_wrapper.ts  coi-serviceworker.js  jsoo_wrapper.ts  solver.ts  solver_minisat.ts  solver_str.ts  test.bc.js  z3Type.d.ts  z3_wrapper.ts
src/tests/: STR.test.tsx
static/js/: 787.fe75ee37.chunk.js  787.fe75ee37.chunk.js.map  main.4dd2f9ce.js  main.59443716.js  main.5c25113f.js  main.5c25113f.js.map  main.6a250a16.js  main.8c0fcb04.js  main.bb5a52b2.js  main.c1c47d1b.js  main.caaa01b7.js  main.caaa01b7.js.map  main.f359524b.js
